force-app/main/default/objects/Purchase_Order__c/fields/Item_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Item_Sales_Tax__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Sales Tax</label>
    <referenceTo>Item_Sales_Tax__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>